fix: hide carousel image counter on mobile

--- a/src/Styles/Slideshow.css
+++ b/src/Styles/Slideshow.css
@@ -58,6 +58,7 @@
   .counter {
     font-size: 14px;
     padding: 3px 8px;
+    display: none;
   }
    .arrow img {
     margin-top: 28px;
@@ -74,6 +75,7 @@
   .counter {
     font-size: 11px;
     padding: 2px 6px;
+    display: none;
   }
   .arrow img {
     margin-top: 28px;
